Issue 2317 fixed. Remove '.x .table th {white-space:nowrap}' code.
git-svn-id: http://xe-core.googlecode.com/svn/branches/luminous@11136 201d5d3c-b55e-5fd7-737f-ddc643e51545

--- a/modules/admin/tpl/css/admin.css
+++ b/modules/admin/tpl/css/admin.css
@@ -58,7 +58,7 @@ header,footer,section,article,aside,nav,hgroup,details,menu,figure,figcaption{di
 .x .table caption .side{float:right;font-weight:normal;margin-left:1em}
 .x .table th,
 .x .table td{border:0;padding:8px;vertical-align:top;text-align:left;border-bottom:1px solid #ddd}
-.x .table th{background:#f8f8f8;white-space:nowrap}
+.x .table th{background:#f8f8f8}
 .x .table thead th{border-bottom:1px solid #999}
 .x .table tfoot td{font-weight:bold;background:#f8f8f8}
 .x .table.even tbody tr:nth-of-type(even){background-color:#fafafa}
